-If you resume your pc from hibernation in the morning, the new day's cards are
 now added more quickly to your queue. This also makes sure there is more data
 available to calculate the past schedule.

-Make newlines outside of tables and latex tags work again (reported by Gnome)
-Fix bug converting existing cards to Cloze cards (reported by Jin Hale).
-'Untagged' now always shows up last in the tag tree, even if there are tags
 starting with a number
-For map cards, the answer is now again labeled 'Aswer:' as opposed to
 'Question:'


MNEMOSYNE 2.0

More than three years in the making, this is essentially a complete rewrite of
the old 1.x codebase, with a new, clean design, consisting of components that
can be swapped in and out very easily, which allows plugin writers maximum
flexibility.

Major user-visible changes:

-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a
 card can have multiple tags. Tags can also be organised in a hierachy, with
 '::' separating the levels of the hierachy.
-Powerful new card browser, giving much more information and flexibility to
 organise your cards.
-'Activate cards' is completely revamped and is much more flexible. Also, sets
 of active cards can be now be saved for easier access later.
-Graphical statistics, easily extensible through plugins (first
 implementation by Mike Appleby).
-Each individual field in a card can now have its own font, colour, ... which
 can be set through the GUI. Background colour is also configurable per card
 type.
-The widget that displays the cards is now a full webbrowser, with e.g.
 support for Javascript, animated gifs, ... .
-Added cramming scheduler plugin, which goes through your cards in random